@@ -1,3 +1,5 @@
+- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2587]
+
 7.19.0 (05-08-2024)
 - Refactor: Remove legacy evaluation season and temporary enrolment logic [#qubIT-Fenix-5554]
 
